--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tbody>
       <tr>
-        <td><img src="images/India.jpg" alt=""></td>
+        <td><img src="images/india.jpg" alt=""></td>
         <td>
           <h1>Aryan Patil</h1>
           <p><em><strong>Founder</strong> and <strong>CTO </strong>of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong></em></p>
