--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     </tbody>
   </table>
   <hr noshade>
-  <a href="Hobbies.html">My Hobbies</a>
+  <a href="hobbies.html">My Hobbies</a>
   <br>
-  <a href="Contact.html">Contact Me</a>
+  <a href="contact.html">Contact Me</a>
 </body>
 
 </html>
